Add first example with eclipse

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ tmp/
 local.properties
 .settings/
 .loadpath
+.recommenders/
+.classpath
+.project
 
 # External tool builders
 .externalToolBuilders/
